deploy: 16b912cb08c7d5ccc2723fe21685faaa0fcdc4be

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -304,6 +304,16 @@
                 </li>
                 <li>
                     <span class="expand-stub"></span>
+                    <a href="WarcraftLegacies.Source.Objectives.html" name="" title="WarcraftLegacies.Source.Objectives">WarcraftLegacies.Source.Objectives</a>
+                    
+                    <ul class="nav level2">
+                          <li>
+                              <a href="WarcraftLegacies.Source.Objectives.ObjectivePowerSource.html" name="" title="ObjectivePowerSource">ObjectivePowerSource</a>
+                          </li>
+                    </ul>
+                </li>
+                <li>
+                    <span class="expand-stub"></span>
                     <a href="WarcraftLegacies.Source.Powers.html" name="" title="WarcraftLegacies.Source.Powers">WarcraftLegacies.Source.Powers</a>
                     
                     <ul class="nav level2">
@@ -380,6 +390,9 @@
                               <a href="WarcraftLegacies.Source.Quests.Draenei.QuestBrokenOne.html" name="" title="QuestBrokenOne">QuestBrokenOne</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.html" name="" title="QuestDimensionalShip">QuestDimensionalShip</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.Draenei.QuestRebuildCivilisation.html" name="" title="QuestRebuildCivilisation">QuestRebuildCivilisation</a>
                           </li>
                           <li>
@@ -387,9 +400,6 @@
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Draenei.QuestShipArgus.html" name="" title="QuestShipArgus">QuestShipArgus</a>
-                          </li>
-                          <li>
-                              <a href="WarcraftLegacies.Source.Quests.Draenei.QuestSurvivorsShattrah.html" name="" title="QuestSurvivorsShattrah">QuestSurvivorsShattrah</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Draenei.QuestTriumvirate.html" name="" title="QuestTriumvirate">QuestTriumvirate</a>
