deploy: b9126136be8a9312febf4d1cfb4749964a79108e

--- a/api-source/WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.html
+++ b/api-source/WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.html
@@ -73,7 +73,8 @@
   
   <h1 id="WarcraftLegacies_Source_Quests_Draenei_QuestDimensionalShip" data-uid="WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip" class="text-break">Class QuestDimensionalShip
   </h1>
-  <div class="markdown level0 summary"></div>
+  <div class="markdown level0 summary"><p>The Draenei acquire some kind of power source to power their ship.</p>
+</div>
   <div class="markdown level0 conceptual"></div>
   <div class="inheritance">
     <h5>Inheritance</h5>
@@ -136,7 +137,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_Draenei_QuestDimensionalShip__ctor_Rectangle_MacroTools_PreplacedUnitSystem_.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.%23ctor(Rectangle%2CMacroTools.PreplacedUnitSystem)%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Draenei/QuestDimensionalShip.cs/#L20">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Draenei/QuestDimensionalShip.cs/#L24">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_Draenei_QuestDimensionalShip__ctor_" data-uid="WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.#ctor*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_Draenei_QuestDimensionalShip__ctor_Rectangle_MacroTools_PreplacedUnitSystem_" data-uid="WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.#ctor(Rectangle,MacroTools.PreplacedUnitSystem)">QuestDimensionalShip(Rectangle, PreplacedUnitSystem)</h4>
@@ -176,7 +177,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_Draenei_QuestDimensionalShip_CompletionPopup.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.CompletionPopup%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Draenei/QuestDimensionalShip.cs/#L41">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Draenei/QuestDimensionalShip.cs/#L58">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_Draenei_QuestDimensionalShip_CompletionPopup_" data-uid="WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.CompletionPopup*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_Draenei_QuestDimensionalShip_CompletionPopup" data-uid="WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.CompletionPopup">CompletionPopup</h4>
@@ -208,7 +209,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_Draenei_QuestDimensionalShip_RewardDescription.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.RewardDescription%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Draenei/QuestDimensionalShip.cs/#L44">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Draenei/QuestDimensionalShip.cs/#L61">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_Draenei_QuestDimensionalShip_RewardDescription_" data-uid="WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.RewardDescription*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_Draenei_QuestDimensionalShip_RewardDescription" data-uid="WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.RewardDescription">RewardDescription</h4>
@@ -242,7 +243,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_Draenei_QuestDimensionalShip_OnComplete_MacroTools_FactionSystem_Faction_.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.OnComplete(MacroTools.FactionSystem.Faction)%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Draenei/QuestDimensionalShip.cs/#L31">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Draenei/QuestDimensionalShip.cs/#L49">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_Draenei_QuestDimensionalShip_OnComplete_" data-uid="WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.OnComplete*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_Draenei_QuestDimensionalShip_OnComplete_MacroTools_FactionSystem_Faction_" data-uid="WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.OnComplete(MacroTools.FactionSystem.Faction)">OnComplete(Faction)</h4>
@@ -282,7 +283,7 @@
                     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_Draenei_QuestDimensionalShip.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A" class="contribution-link">Improve this Doc</a>
                   </li>
                   <li>
-                    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Draenei/QuestDimensionalShip.cs/#L14" class="contribution-link">View Source</a>
+                    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Draenei/QuestDimensionalShip.cs/#L16" class="contribution-link">View Source</a>
                   </li>
                 </ul>
               </div>
