deploy: ad963659df9a144eda685530eaf834151f8aac5c

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -1400,6 +1400,9 @@
                     
                     <ul class="nav level2">
                           <li>
+                              <a href="WarcraftLegacies.Source.Spells.ExtractSunwellVial.html" name="" title="ExtractSunwellVial">ExtractSunwellVial</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Spells.PingOilDeposits.html" name="" title="PingOilDeposits">PingOilDeposits</a>
                           </li>
                           <li>
