deploy: 3cb453e976acd9d80e9ec6103d967807b0facd0e

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -897,6 +897,9 @@
                               <a href="MacroTools.Powers.CityOfHeroes.html" name="" title="CityOfHeroes">CityOfHeroes</a>
                           </li>
                           <li>
+                              <a href="MacroTools.Powers.ControlLevelPerTurnBonus.html" name="" title="ControlLevelPerTurnBonus">ControlLevelPerTurnBonus</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.Powers.DummyPower.html" name="" title="DummyPower">DummyPower</a>
                           </li>
                           <li>
