deploy: a275533fb588a90786e47a1c784586a15f62d7ed

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -872,6 +872,9 @@
                               <a href="WarcraftLegacies.Source.Quests.Stormwind.QuestKhadgar.html" name="" title="QuestKhadgar">QuestKhadgar</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.Stormwind.QuestKingdomOfManStormwind.html" name="" title="QuestKingdomOfManStormwind">QuestKingdomOfManStormwind</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.Stormwind.QuestLakeshire.html" name="" title="QuestLakeshire">QuestLakeshire</a>
                           </li>
                           <li>
