--- a/api-source/WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.html
+++ b/api-source/WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.html
@@ -73,7 +73,8 @@
   
   <h1 id="WarcraftLegacies_Source_Quests_Naga_QuestRegroupCastaway" data-uid="WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway" class="text-break">Class QuestRegroupCastaway
   </h1>
-  <div class="markdown level0 summary"></div>
+  <div class="markdown level0 summary"><p>Caputre various control points to unlock Sea Witches</p>
+</div>
   <div class="markdown level0 conceptual"></div>
   <div class="inheritance">
     <h5>Inheritance</h5>
@@ -139,7 +140,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_Naga_QuestRegroupCastaway__ctor.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.%23ctor%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Naga/QuestRegroupCastaway.cs/#L11">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Naga/QuestRegroupCastaway.cs/#L15">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_Naga_QuestRegroupCastaway__ctor_" data-uid="WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.#ctor*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_Naga_QuestRegroupCastaway__ctor" data-uid="WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.#ctor">QuestRegroupCastaway()</h4>
@@ -156,7 +157,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_Naga_QuestRegroupCastaway_CompletionPopup.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.CompletionPopup%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Naga/QuestRegroupCastaway.cs/#L22">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Naga/QuestRegroupCastaway.cs/#L27">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_Naga_QuestRegroupCastaway_CompletionPopup_" data-uid="WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.CompletionPopup*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_Naga_QuestRegroupCastaway_CompletionPopup" data-uid="WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.CompletionPopup">CompletionPopup</h4>
@@ -188,7 +189,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_Naga_QuestRegroupCastaway_RewardDescription.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.RewardDescription%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Naga/QuestRegroupCastaway.cs/#L24">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Naga/QuestRegroupCastaway.cs/#L30">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_Naga_QuestRegroupCastaway_RewardDescription_" data-uid="WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.RewardDescription*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_Naga_QuestRegroupCastaway_RewardDescription" data-uid="WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.RewardDescription">RewardDescription</h4>
@@ -226,7 +227,7 @@
                     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_Naga_QuestRegroupCastaway.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A" class="contribution-link">Improve this Doc</a>
                   </li>
                   <li>
-                    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Naga/QuestRegroupCastaway.cs/#L9" class="contribution-link">View Source</a>
+                    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Naga/QuestRegroupCastaway.cs/#L12" class="contribution-link">View Source</a>
                   </li>
                 </ul>
               </div>
