deploy: 0310389e24e71da593422ab4aac50ea87bdede67

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -518,6 +518,9 @@
                     
                     <ul class="nav level2">
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.Frostwolf.QuestDarkspear.html" name="" title="QuestDarkspear">QuestDarkspear</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.Frostwolf.QuestDrektharsSpellbook.html" name="" title="QuestDrektharsSpellbook">QuestDrektharsSpellbook</a>
                           </li>
                           <li>
