deploy: f4e0dfcf399a6b75246d0d881c1b81ced06ad2af

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -731,6 +731,9 @@
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.html" name="" title="QuestRegroupCastaway">QuestRegroupCastaway</a>
                           </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Naga.QuestSuramar.html" name="" title="QuestSuramar">QuestSuramar</a>
+                          </li>
                     </ul>
                 </li>
                 <li>
