deploy: 46d14e9edfd509ad48a8f5df4e87eb00d0867a96

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -30,6 +30,9 @@
                               <a href="MacroTools.LeveledAbilityField-1.html" name="" title="LeveledAbilityField&lt;T&gt;">LeveledAbilityField&lt;T&gt;</a>
                           </li>
                           <li>
+                              <a href="MacroTools.Logger.html" name="" title="Logger">Logger</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.PreplacedUnitSystem.html" name="" title="PreplacedUnitSystem">PreplacedUnitSystem</a>
                           </li>
                           <li>
@@ -52,9 +55,6 @@
                           </li>
                           <li>
                               <a href="MacroTools.UnitType.html" name="" title="UnitType">UnitType</a>
-                          </li>
-                          <li>
-                              <a href="MacroTools.WarningLogger.html" name="" title="WarningLogger">WarningLogger</a>
                           </li>
                     </ul>
                 </li>
