--- a/api-source/WarcraftLegacies.Source.Setup.Legends.LegendGilneas.html
+++ b/api-source/WarcraftLegacies.Source.Setup.Legends.LegendGilneas.html
@@ -211,18 +211,18 @@
   </table>
   <span class="small pull-right mobile-hide">
     <span class="divider">|</span>
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Setup_Legends_LegendGilneas_LightDawn.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Setup.Legends.LegendGilneas.LightDawn%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Setup_Legends_LegendGilneas_NorthshireAbbey.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Setup.Legends.LegendGilneas.NorthshireAbbey%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/Legends/LegendGilneas.cs/#L15">View Source</a>
   </span>
-  <a id="WarcraftLegacies_Source_Setup_Legends_LegendGilneas_LightDawn_" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendGilneas.LightDawn*"></a>
-  <h4 id="WarcraftLegacies_Source_Setup_Legends_LegendGilneas_LightDawn" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendGilneas.LightDawn">LightDawn</h4>
+  <a id="WarcraftLegacies_Source_Setup_Legends_LegendGilneas_NorthshireAbbey_" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendGilneas.NorthshireAbbey*"></a>
+  <h4 id="WarcraftLegacies_Source_Setup_Legends_LegendGilneas_NorthshireAbbey" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendGilneas.NorthshireAbbey">NorthshireAbbey</h4>
   <div class="markdown level1 summary"></div>
   <div class="markdown level1 conceptual"></div>
   <h5 class="decalaration">Declaration</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public static Capital LightDawn { get; }</code></pre>
+    <pre><code class="lang-csharp hljs">public static Capital NorthshireAbbey { get; }</code></pre>
   </div>
   <h5 class="propertyValue">Property Value</h5>
   <table class="table table-bordered table-striped table-condensed">
