deploy: d408a50f2163144738fdef17003f788a42363cae

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -981,6 +981,16 @@
                 </li>
                 <li>
                     <span class="expand-stub"></span>
+                    <a href="WarcraftLegacies.Source.Researches.Scourge.html" name="" title="WarcraftLegacies.Source.Researches.Scourge">WarcraftLegacies.Source.Researches.Scourge</a>
+                    
+                    <ul class="nav level2">
+                          <li>
+                              <a href="WarcraftLegacies.Source.Researches.Scourge.Revenants.html" name="" title="Revenants">Revenants</a>
+                          </li>
+                    </ul>
+                </li>
+                <li>
+                    <span class="expand-stub"></span>
                     <a href="WarcraftLegacies.Source.Researches.Stormwind.html" name="" title="WarcraftLegacies.Source.Researches.Stormwind">WarcraftLegacies.Source.Researches.Stormwind</a>
                     
                     <ul class="nav level2">
@@ -1364,9 +1374,6 @@
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Setup.Spells.FelHordeSpellSetup.html" name="" title="FelHordeSpellSetup">FelHordeSpellSetup</a>
-                          </li>
-                          <li>
-                              <a href="WarcraftLegacies.Source.Setup.Spells.ForsakenSpellSetup.html" name="" title="ForsakenSpellSetup">ForsakenSpellSetup</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Setup.Spells.FrostwolfSpellSetup.html" name="" title="FrostwolfSpellSetup">FrostwolfSpellSetup</a>
