--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -27,6 +27,9 @@
                               <a href="MacroTools.GameTime.html" name="" title="GameTime">GameTime</a>
                           </li>
                           <li>
+                              <a href="MacroTools.IntegrityChecker.html" name="" title="IntegrityChecker">IntegrityChecker</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.LeveledAbilityField-1.html" name="" title="LeveledAbilityField&lt;T&gt;">LeveledAbilityField&lt;T&gt;</a>
                           </li>
                           <li>
