deploy: 24264e79bb87bdc5a348cd14f8f8acb4379a1452

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -956,10 +956,19 @@
                     
                     <ul class="nav level2">
                           <li>
+                              <a href="MacroTools.ResearchSystems.BasicResearch.html" name="" title="BasicResearch">BasicResearch</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.ResearchSystems.IncompatibleResearchSystem.html" name="" title="IncompatibleResearchSystem">IncompatibleResearchSystem</a>
                           </li>
                           <li>
                               <a href="MacroTools.ResearchSystems.ParentChildResearchSystem.html" name="" title="ParentChildResearchSystem">ParentChildResearchSystem</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.ResearchSystems.Research.html" name="" title="Research">Research</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.ResearchSystems.ResearchManager.html" name="" title="ResearchManager">ResearchManager</a>
                           </li>
                     </ul>
                 </li>
