--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -334,6 +334,9 @@
                               <a href="WarcraftLegacies.Source.Quests.QuestBookOfMedivh.html" name="" title="QuestBookOfMedivh">QuestBookOfMedivh</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.QuestRagnaros.html" name="" title="QuestRagnaros">QuestRagnaros</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.QuestSkullOfGuldan.html" name="" title="QuestSkullOfGuldan">QuestSkullOfGuldan</a>
                           </li>
                           <li>
