deploy: 66f7c70b3fe6b149809cef63235aa770bba52777

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -689,6 +689,9 @@
                               <a href="WarcraftLegacies.Source.Quests.Lordaeron.QuestGarithosMindControl.html" name="" title="QuestGarithosMindControl">QuestGarithosMindControl</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.html" name="" title="QuestHearthglen">QuestHearthglen</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.Lordaeron.QuestKingArthas.html" name="" title="QuestKingArthas">QuestKingArthas</a>
                           </li>
                           <li>
@@ -708,6 +711,9 @@
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Lordaeron.QuestThunderEagle.html" name="" title="QuestThunderEagle">QuestThunderEagle</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.html" name="" title="QuestTyrHand">QuestTyrHand</a>
                           </li>
                     </ul>
                 </li>
