deploy: 2ae9a152a96caa6e4bb12ef818c394225a8276b1

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -1122,6 +1122,9 @@
                               <a href="WarcraftLegacies.Source.Setup.ResearchSetup.html" name="" title="ResearchSetup">ResearchSetup</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Setup.SharedFactionConfigSetup.html" name="" title="SharedFactionConfigSetup">SharedFactionConfigSetup</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Setup.ShoreSetup.html" name="" title="ShoreSetup">ShoreSetup</a>
                           </li>
                           <li>
