--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -224,7 +224,22 @@
                               <a href="WarcraftLegacies.Source.Mechanics.Goblins.NuclearLaunchWarning.html" name="" title="NuclearLaunchWarning">NuclearLaunchWarning</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Mechanics.Goblins.OilHarvester.html" name="" title="OilHarvester">OilHarvester</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Mechanics.Goblins.OilHarvesterBuff.html" name="" title="OilHarvesterBuff">OilHarvesterBuff</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Mechanics.Goblins.OilProducer.html" name="" title="OilProducer">OilProducer</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Mechanics.Goblins.OilProducerBuff.html" name="" title="OilProducerBuff">OilProducerBuff</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Mechanics.Goblins.OilUser.html" name="" title="OilUser">OilUser</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Mechanics.Goblins.OilUserBuff.html" name="" title="OilUserBuff">OilUserBuff</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Mechanics.Goblins.Trader.html" name="" title="Trader">Trader</a>
