deploy: 67a1401c7bf45f3648905bb2aeac3072758e5a91

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -210,6 +210,9 @@
                           <li>
                               <a href="WarcraftLegacies.Source.Mechanics.Frostwolf.FrostwolfStructurePackingConfig.html" name="" title="FrostwolfStructurePackingConfig">FrostwolfStructurePackingConfig</a>
                           </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Mechanics.Frostwolf.PeonsStartHarvestingShips.html" name="" title="PeonsStartHarvestingShips">PeonsStartHarvestingShips</a>
+                          </li>
                     </ul>
                 </li>
                 <li>
