deploy: b1d0485fa051d1b0675450d8aaccdb18aa8e1b1b

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -696,6 +696,9 @@
                               <a href="MacroTools.ObjectiveSystem.Objectives.ObjectiveCastSpell.html" name="" title="ObjectiveCastSpell">ObjectiveCastSpell</a>
                           </li>
                           <li>
+                              <a href="MacroTools.ObjectiveSystem.Objectives.ObjectiveCastSpellFromUnit.html" name="" title="ObjectiveCastSpellFromUnit">ObjectiveCastSpellFromUnit</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.ObjectiveSystem.Objectives.ObjectiveChannelRect.html" name="" title="ObjectiveChannelRect">ObjectiveChannelRect</a>
                           </li>
                           <li>
